# denseuavhomography

./: .gitignore  Model.md  README.md  claude.md  pyproject.toml
configs/: denseuav_v1.yaml
data/: denseuav_dataset.py  paired_transforms.py  samplers.py  transforms.py
engine/: evaluator.py  hooks.py  trainer.py
losses/: ce.py  contrastive.py  homography_loss.py  kl.py  sw_triplet.py  total_loss.py
metrics/: recall.py  sdm.py
models/: cosine_head.py  heads.py  homography_net.py  homography_warp.py  vit_siamese.py
scripts/: eval.py  sanity_check_batch.py  sanity_check_shapes.py  train.py
tests/: test_warp_identity.py
utils/: checkpoint.py  logger.py  memory_queue.py  meters.py  seed.py
